08-11-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected behaviour of handleArray() to map field names properly
	* Changed use of external foreign reference field in mapping transformtions and MM-relations

08-11-04 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added several setter and getter methods

08-10-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added sample userFunc
	* Updated manual

08-10-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added feature for calling userFuncs on every external field

08-09-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added API for calling external_import directly with data
	* Modified BE module to separate synchronisable from non-synchronisable tables
	* Updated manual

08-08-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Introduced possibility to synchronise a table with multiple external sources
	* Corrected bug in mapping feature
	* Updated manual with instructions for setting up automatic synchronisation and some troubleshooting help

08-08-04 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated manual with missing notes about array data format
	* Released version 0.6.2

08-08-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added array data format handling
	* Added user rights setup instructions in the manual
	* Released version 0.6.1

08-07-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Introduced use of TCEmain for proper data manipulation
	* Cleaned up extended TCA syntax
	* Added hook for pre-processing data before storage
	* Released version 0.6.0

08-04-29 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Initial release (version 0.5.0)